--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-tactile
-title: 你好，這裡是單車大熊
+title: 你好，這裡是大熊
 description: KOALA.BIKE
 show_downloads: false
 google_analytics: UA-122811229-1
